# MATS-l1b-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: calibration_data.json
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/: .zattrs  .zmetadata
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/CalibrationErrors/: .zarray  .zattrs  0.0.0
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/DataLevel/: .zattrs  0
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/ImageCalibrated/: .zarray  .zattrs
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/JPEGQ/: .zattrs
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/L1ACode/: .zarray  .zattrs  0
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/L1BCode/: .zarray  .zattrs  0
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/NCBINCCDColumns/: .zattrs
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/NCBINFPGAColumns/: .zattrs
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/NCOL/: .zattrs
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/NCSKIP/: .zattrs
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/NRBIN/: .zattrs
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/NROW/: .zattrs
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/NRSKIP/: .zattrs
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/TEXPMS/: .zattrs
data/L1b_IR1-2023_3_1_0_0_0-2023_3_1_1_0_0.zarr/TPheight/: .zattrs  0
examples/: calc_error.py  plot_example_1.py  plot_example_2.py
scripts/: calc_error.py  get_zarr.py
src/mats_l1b_tools/: add_info.py  error.py  fetch_data.py  geolocation.py  read_functions.py
(+64 files in other folders)
